Switch build tooling to Vite

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://www.amcharts.com/lib/4/core.js"></script>
     <script src="https://www.amcharts.com/lib/4/charts.js"></script>
     <script src="https://www.amcharts.com/lib/4/themes/material.js"></script>
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
     <meta charset="utf-8">
 </head>
 <body>
@@ -375,6 +375,6 @@
         <a target="_blank" href="http://davidmontana.net/papers/hybrid.pdf">here.</a>
     </p>
 </div>
-<script src="dist/sketch.js"></script>
+<script type="module" src="/src/sketch.js"></script>
 </body>
 </html>
